micro-java/target/classes/META-INF/jkube/openshift/micro-java-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/vcs-ref: micro-config
    jkube.io/git-url: https://github.com/phillipackermann/DO288-apps.git
    app.openshift.io/vcs-uri: https://github.com/phillipackermann/DO288-apps.git
    jkube.io/git-commit: 50e16819418204a89d2c15e68b9516f48c21f533
    jkube.io/git-branch: micro-config
  labels:
    app: micro-java
    provider: jkube
    version: "1.0"
    group: com.redhat.training.openshift.hello
  name: micro-java
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: micro-java
